--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,5 +1,5 @@
 [user]
-    name = aarondettmann
+    name = Aaron Dettmann
     email = aaron.dettmann@gmail.com
 
 [color]
@@ -10,15 +10,17 @@
 
 [alias]
     a = add
+    amend = commit --amend
     c = commit
     cb = checkout -b
     co = checkout
+    d = diff
+    pr = pull --rebase
     root = rev-parse --show-toplevel
-    s = status
+    s = status --short
+    status = status --short
     undo = checkout --
     unstage = reset HEAD --
-    amend = commit --amend
-    d = diff
 
 [merge]
     tool = vimdiff
@@ -29,8 +31,15 @@
 
 [url "https://github.com/"]
     insteadOf = gh:
+
 [filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
+        clean = git-lfs clean -- %f
+        smudge = git-lfs smudge -- %f
+        process = git-lfs filter-process
+        required = true
+
+[pull]
+        rebase = true
+
+[init]
+        defaultBranch = main
